@@ -1,3 +1,7 @@
+2006-11-06  Quentin Mathe <qmathe@club-internet.fr>
+
+    * Fix compilation on GNUstep.
+
 2006-11-05  Quentin Mathe <qmathe@club-internet.fr>
 
     * Fix flick of matrix view.
